# subsets-mcp-server

./: .gitignore  README.md  install.sh  pyproject.toml  subsets
dev/: test_install.py
src/: auth.py  cli.py  embeddings.py  keyword_search.py  server.py  sync.py
src/subsets_platform/: local.py  remote.py
